fmpage is now showing corresponding sample submission's affiliated institute and the associated collaborator's username

--- a/DNAOrderApp/order/templates/order/fmprojectlist.html
+++ b/DNAOrderApp/order/templates/order/fmprojectlist.html
@@ -792,7 +792,7 @@ border:solid 1px #c3c3c3;
 								<tr>
 									<th>Sample Submission</th>
 									<th>Phenotype List</th>
-									<th> Collab's Affiliated Institute </th>
+									<th> SS's Affiliated Institute </th>
 									<th> Collab's Contact Info </th>
 									<th> # of Samples </th>
 									<th> Date Created </th>
@@ -839,8 +839,8 @@ border:solid 1px #c3c3c3;
 													<a href="#" class="trigger-phenolist-popover pull-right" data-toggle="modal" value="{{ss.pk}}" id="trigger-phenolist-popover{{ss.pk}}" rel="popover" data-container="body">>>See More</a>
 												</ul>
 											</td>
-											<td>{{ ss.affiliatedinstitute|get_affiliated_institute_given_ai_list }}</td>
-											<td></td>
+											<td>{{ ss.affiliated_institute }}</td>
+											<td>{{ ss_contacts_dict|access:ss.id|safe }}</td>
 											<td>{{ ss.sample_num }}</td>
 											<td>{{ ss.date_created }}</td>
 											<td>{{ ss.last_updated }}</td>
