still working on edit sample submission modal. everything is displaying correctly. ideally could add atomicity into the series of rows being saved sequentially in edit_ss_fmpage, still need to look into it, but it works right now.

--- a/DNAOrderApp/order/templates/order/edit-ss-fmpage.html
+++ b/DNAOrderApp/order/templates/order/edit-ss-fmpage.html
@@ -75,7 +75,7 @@
     					{% endfor %}
     				</table>
     			</td>
-    			<td>Edit</td>
+    			<td><a href="#" class="edit-ss-button" id="edit-ss-contact-button-modal" tss="{{tssid}}" onclick="openEditSSContact({{ssid}},{{tssid}},this)">Edit</a></td>
     		</tr>
     	</table>
     </form>
