--- a/DNAOrderApp/order/templates/order/edit-tmp-sample-submission-3.html
+++ b/DNAOrderApp/order/templates/order/edit-tmp-sample-submission-3.html
@@ -1,7 +1,7 @@
-<div class="modal-body" id="tmp-sample-submission-modal-body" name="3">
+<div class="modal-body" id="edit-sample-submission-modal-body" name="3">
 	<h3> Affiliated Institute </h3>
 
-	<form class="add_a_temp_ss" method="post" id="tmp-affiliated-institute-form" tssid="{{tssid}}" ssid="{{ssid}}" action="edit-tss-page-3/{{ssid}}/{{tssid}}">
+	<form class="edit_temp_ss" method="post" id="edit-tmp-affiliated-institute-form" tssid="{{tssid}}" ssid="{{ssid}}" action="edit-tss-page-3/{{ssid}}/{{tssid}}">
 		{% csrf_token %}
 		<table>
 			{{ tssaiform }}
