so far adding and displaying temporary rows is working. problem is ajaxSubmit isn't working - and also, opening other edit buttons open the same temporary row and not the correct one.

--- a/DNAOrderApp/order/templates/order/edit-ss-fmpage.html
+++ b/DNAOrderApp/order/templates/order/edit-ss-fmpage.html
@@ -6,7 +6,7 @@
         {{ alert_msg|safe }}
     </div>
 
-    <form class="edit_ss" id="edit_ss_form" action="edit-ss-fmpage/{{ssid}}/{{tssid}}" method="post" tssid="{{tssid}}" ssid="{{ssid}}">
+    <form class="edit_temp_ss_fmpage" id="edit_ss_form" action="edit-ss-fmpage/{{ssid}}/{{tssid}}" method="post" tssid="{{tssid}}" ssid="{{ssid}}">
     	{% csrf_token %}
     	<table class="table table-bordered">
     		<tr>
